# partiqleDTR

./: .gitignore  .zenodo.json  404.html  LICENSE  README.md  cluster_task.sh  create_checkpoint_from_mlflow.py  create_n_selected_params_plot.py  create_plots_from_metrics.py  create_plots_from_optuna.py  evaluate_seeds.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_bak.txt  sitemap.xml  start_training.sh  tests.ipynb
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_generation.yml  data_processing.yml  data_science.yml
data/00_parameters/: artificial_decay.yml  artificial_decay_small.yml  createParameters.py  decaylanguage.pkl  decaylanguage.yml  model_parameters.yml  omega_decay.yml  phasespace.pkl  phasespace.yml  pi0_decay.yml  simple_decay.yml
docs/: index.md  results.md
docs/source/: conf.py
results/: index.html
search/: search_index.json
source/: conf.py  index.rst
src/: requirements.txt  setup.py
src/partiqleDTR/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/partiqleDTR/pipelines/data_generation/: __init__.py  nodes.py  pipeline.py
src/partiqleDTR/pipelines/data_processing/: nodes.py  pipeline.py
src/partiqleDTR/pipelines/data_science/: circuit_gradient_visualization.py  circuits.py  custom_sampler_qnn.py  dgnn.py  dqgnn.py  gnn.py  gradients_visualization.py  graph_visualization.py  hyperparam_optimizer.py  instructor.py  nodes.py  nri_blocks.py  pipeline.py  qftgnn.py  qgnn.py  qmlp.py  utils.py
src/partiqleDTR/pipelines/data_science/_backups/: dgnn.py  dqgnn.py  gnn.py  pqgnn.py  qftgnn.py  qgnn_bckp.py  qgnn_new.py  qmlp.py  quantum_mlp.py  sgnn.py  sqgnn.py
src/partiqlegan/: __main__.py  hooks.py  pipeline_registry.py  settings.py
src/partiqlegan/pipelines/data_generation/: README.md  __init__.py  nodes.py  pipeline.py
src/partiqlegan/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/partiqlegan/pipelines/data_science/: .gitignore  __init__.py  dgnn.py  dqgnn.py  gnn.py  gradients_visualization.py  graph_visualization.py  hyperparam_optimizer.py  instructor.py  mlp.py  nodes.py  nodes_bak.py  nri.py  nri_gnn.py  pipeline.py  pqgnn.py  qftgnn.py  qgnn.py  qgnn_new.py  qmlp.py  quantum_mlp.py  sgnn.py  sqgnn.py  utils.py
src/partiqlegan/pipelines/data_science/instructors/: XNRI_enc.py  base.py
src/partiqlegan/pipelines/data_science/models/: base.py  decoder.py  encoder.py  gnn.py  nri.py
src/partiqlegan/pipelines/data_science/utils/: torch_extension.py
src/tests/: conftest.py  test_run.py
src/tests/pipelines/data_generation/: test_nodes.py  test_pipeline.py
studies/: .gitignore  partiqledtr.db
tasks/: default.sh  gen_data.sh  proc_data.sh  train_model.sh
