[tool.kedro]
package_name = "partiqlegan"
project_name = "partiqlegan"
project_version = "0.18.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/partiqlegan -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "partiqlegan"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
qiskit = "^0.38.0"
pytorch = "^1.0.2"
black = "^22.6.0"
kedro = "^0.18.3"
kedro-viz = "^5.1.1"
kedro-mlflow = "^0.11.3"
formattex = "^0.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.2"
mkdocstrings = "^0.19.0"
markdown-include = "^0.8.0"
mkdocs-material = "^8.5.11"
mkdocstrings-python = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
