[tool.kedro]
package_name = "partiqleDTR"
project_name = "partiqleDTR"
project_version = "0.18.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/partiqleDTR -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "partiqleDTR"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
qiskit = "^0.42.1"
qiskit-machine-learning = "^0.5.0"
torchvision = "^0.15.1+cpu"
black = "^22.6.0"
kedro = "^0.18.3"
kedro-viz = "^5.1.1"
kedro-mlflow = "^0.11.3"
formattex = "^0.0.3"
python-json-logger = "^2.0.7"
phasespace = "^1.8.0"
particle = "^0.21.2"
decaylanguage = "^0.15.1"
zfit = "^0.11.1"
zfit-physics = "^0.5.0"
redis = "^4.5.1"
optuna = "^3.1.0"
matplotlib = "^3.7.0"
torchinfo = "^1.7.2"
pylatexenc = "^2.10"
dask = "^2023.3.1"
distributed = "^2023.3.1"
bokeh = "2.4.3"
plotly = "^5.13.1"
pytest-cov = "^4.0.0"
optuna-dashboard = "^0.9.1"
qiskit-ibm-provider = "^0.5.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.2"
mkdocstrings = "^0.19.0"
markdown-include = "^0.8.0"
mkdocs-material = "^8.5.11"
mkdocstrings-python = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
